# near-bot

./: Cargo.toml
src/: main.rs
