[package]
name = "near-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.5.2", features = ["auto-send", "macros"] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
tokio = { version = "1.3", features = ["rt-multi-thread", "macros"] }